# hotas-ble

./: CMakeLists.txt  README.md  dl_comp.py  idf_component_manager.yml  patch_cache.py  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  ble_gamepad.cpp  ble_gamepad.h  debug_portal.cpp  debug_portal.h  hid_device_manager.cpp  hid_device_manager.h  hid_parser.cpp  hid_parser.h  idf_component.yml  input_decoder.cpp  input_decoder.h  main.cpp  shared_types.h  usb_host_manager.cpp  usb_host_manager.h
